# amalgamation-rs

./: Cargo.toml  LICENSE  README.md
src/: action.rs  interactive.rs  main.rs  progress.rs
