[package]
name = "amalgamation-rs"
version = "0.1.0"
edition = "2021"
authors = ["LUCY Jialin Lu <luxxxlucy@gmail.com>"]
description = "A command-line tool that downloads a GitHub repository and merges all text/source files into a single file for easier browsing and LLM analysis"
package_name = { git = "https://github.com/LuxxxLucy/amalgamation-rs" }
license = "MIT"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.36", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
indicatif = "0.17"
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
tempfile = "3.10"
